# hpbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Readme.md
application/: factory.h  hprun.cc  poisson.cc  stokes.cc
examples/: kovasznay.prm  poisson.prm  poisson_gmg.prm  stokes.prm
examples/minimal/: poisson_3d_hp_full_minimal.prm  poisson_3d_hp_legendre_minimal.prm  poisson_3d_hp_minimal.prm  poisson_3d_hp_minimal_full.prm
examples/paper/poisson/: poisson_cycles.prm  poisson_figure.prm  poisson_strong_nref10.prm  poisson_strong_nref12.prm
examples/paper/poisson_weights/: poisson_weights.prm  poisson_weights_weighting_exponent-1.0.prm  poisson_weights_weighting_exponent-1.1.prm  poisson_weights_weighting_exponent-1.2.prm  poisson_weights_weighting_exponent-1.3.prm  poisson_weights_weighting_exponent-1.4.prm  poisson_weights_weighting_exponent-1.5.prm  poisson_weights_weighting_exponent-1.6.prm  poisson_weights_weighting_exponent-1.7.prm  poisson_weights_weighting_exponent-1.8.prm  poisson_weights_weighting_exponent-1.9.prm  poisson_weights_weighting_exponent-2.0.prm  poisson_weights_weighting_exponent-2.1.prm  poisson_weights_weighting_exponent-2.2.prm  poisson_weights_weighting_exponent-2.3.prm  poisson_weights_weighting_exponent-2.4.prm  poisson_weights_weighting_exponent-2.5.prm  poisson_weights_weighting_exponent-2.6.prm  poisson_weights_weighting_exponent-2.7.prm  poisson_weights_weighting_exponent-2.8.prm  poisson_weights_weighting_exponent-2.9.prm  poisson_weights_weighting_exponent-3.0.prm  poisson_weights_weighting_exponent-3.1.prm  poisson_weights_weighting_exponent-3.2.prm  poisson_weights_weighting_exponent-3.3.prm  poisson_weights_weighting_exponent-3.4.prm  poisson_weights_weighting_exponent-3.5.prm  poisson_weights_weighting_exponent-3.6.prm  poisson_weights_weighting_exponent-3.7.prm  poisson_weights_weighting_exponent-3.8.prm  poisson_weights_weighting_exponent-3.9.prm  poisson_weights_weighting_exponent-4.0.prm
examples/paper/stokes/: stokes_cycles.prm  stokes_figure.prm  stokes_strong.prm
examples/paper/stokes_weights/: stokes_weights.prm  stokes_weights_weighting_exponent-1.0.prm  stokes_weights_weighting_exponent-1.1.prm  stokes_weights_weighting_exponent-1.2.prm  stokes_weights_weighting_exponent-1.3.prm  stokes_weights_weighting_exponent-1.4.prm  stokes_weights_weighting_exponent-1.5.prm  stokes_weights_weighting_exponent-1.6.prm  stokes_weights_weighting_exponent-1.7.prm  stokes_weights_weighting_exponent-1.8.prm  stokes_weights_weighting_exponent-1.9.prm  stokes_weights_weighting_exponent-2.0.prm  stokes_weights_weighting_exponent-2.1.prm  stokes_weights_weighting_exponent-2.2.prm  stokes_weights_weighting_exponent-2.3.prm  stokes_weights_weighting_exponent-2.4.prm  stokes_weights_weighting_exponent-2.5.prm  stokes_weights_weighting_exponent-2.6.prm  stokes_weights_weighting_exponent-2.7.prm  stokes_weights_weighting_exponent-2.8.prm  stokes_weights_weighting_exponent-2.9.prm  stokes_weights_weighting_exponent-3.0.prm  stokes_weights_weighting_exponent-3.1.prm  stokes_weights_weighting_exponent-3.2.prm  (+8 more)
include/: factory.h  function.h  global.h  grid.h  linear_algebra.h  log.h  mg_solver.h  operator.h  operator_base.h  parameter.h  partitioning.h  precondition_asm.h  precondition_diag_ext.h  problem.h  problem_base.h
include/adaptation/: base.h  factory.h  h.h  hp_fourier.h  hp_full.h  hp_history.h  hp_legendre.h  p.h  parameter.h
include/base/: explicitely_instantiate.h  global.h  linear_algebra.h  log.h  partitioning.h
include/function/: factory.h  kovasznay.h  reentrant_corner.h
include/grid/: factory.h  kovasznay.h  reentrant_corner.h  y_pipe.h
include/log/: log.h
include/multigrid/: asm.h  diagonal_matrix_timer.h  extended_diagonal.h  mg_solver.h  operator_base.h  parameter.h  patch_indices.h  reduce_and_assemble.h
include/operator/: base.h  factory.h
include/poisson/: amg.h  gmg.h  matrixbased.h  matrixbased_operator.h  matrixfree.h  matrixfree_operator.h  problem.h  solvers.h
include/precondition/: asm.h  extended_diagonal.h  patch_indices.h  reduce_and_assemble.h
include/problem/: base.h  factory.h  parameter.h  poisson.h  stokes.h
include/solver/: mg_solver.h  parameter.h  parameters.h
include/stokes/: amg.h  block_schur_preconditioner.h  problem.h
include/stokes_matrixbased/: operators.h  problem.h  solvers.h
include/stokes_matrixfree/: operators.h  problem.h  solvers.h
scripts/: postprocess.py
source/: function.cc  global.cc  grid.cc  log.cc  problem.cc
source/adaptation/: h.cc  hp_fourier.cc  hp_full.cc  hp_history.cc  hp_legendre.cc  p.cc
source/base/: global.cc  log.cc
source/function/: kovasznay.cc  reentrant_corner.cc
source/grid/: kovasznay.cc  reentrant_corner.cc  y_pipe.cc
source/log/: log.cc
source/poisson/: matrixbased.cc  matrixbased_operator.cc  matrixfree.cc  matrixfree_operator.cc  problem.cc
source/problem/: poisson.cc  stokes.cc
source/stokes/: problem.cc
source/stokes_matrixbased/: operators.cc  problem.cc
source/stokes_matrixfree/: operators.cc  problem.cc
tests/hprun/: fichera_dealiitrilinos.prm  fichera_matrixfree_amg.prm  fichera_matrixfree_gmg.prm  fichera_matrixfree_gmg_asm.prm  fichera_matrixfree_gmg_diagonal.prm  fichera_matrixfree_gmg_extended.prm  fichera_petsc.prm  fichera_trilinos.prm  kovasznay_dealiitrilinos.prm  kovasznay_matrixfree_amg.prm  kovasznay_matrixfree_gmg.prm  kovasznay_matrixfree_gmg_asm.prm  kovasznay_matrixfree_gmg_diagonal.prm  kovasznay_matrixfree_gmg_extended.prm  kovasznay_petsc.prm  kovasznay_trilinos.prm  poisson_dealiitrilinos.prm  poisson_matrixfree_amg.prm  poisson_matrixfree_gmg.prm  poisson_petsc.prm  poisson_trilinos.prm  stokes_dealiitrilinos.prm  stokes_dealiitrilinos_ypipe.prm  stokes_matrixfree_amg.prm  stokes_matrixfree_amg_ypipe.prm  stokes_matrixfree_gmg_ypipe.prm  stokes_petsc.prm  stokes_trilinos.prm  ypipe_dealiitrilinos.prm  ypipe_matrixfree_amg.prm  ypipe_matrixfree_gmg.prm  ypipe_matrixfree_gmg_asm.prm  ypipe_matrixfree_gmg_diagonal.prm  ypipe_matrixfree_gmg_extended.prm
(+371 files in other folders)
